--- a/mywearapplication/src/main/res/values/strings.xml
+++ b/mywearapplication/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">My Wear Application</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
+    <string name="my_analog_name">My Analog</string>
 </resources>
