--- a/mywearapplication/src/main/res/values/strings.xml
+++ b/mywearapplication/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">My Wear Application</string>
+    <string name="app_name">My Nano Sunshine App</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
-    <string name="my_analog_name">My Analog</string>
+    <string name="my_analog_name">Nano 6 Sunshine</string>
 </resources>
